# lab1_os

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_tests.sh
lab1_os/: .gitignore  Creator.cpp  Main.cpp  Makefile  Reporter.cpp  employee.h  main.cpp
lab1_os.xcodeproj/: project.pbxproj
lab1_os.xcodeproj/xcuserdata/kudinovaea2006yandex.by.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Creator.cpp  Main.cpp  Reporter.cpp  employee.h
tests/: test_creator.cpp  test_reporter.cpp
